--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ djangorestframework = "^3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
+django-seed = "^0.3.1"
+psycopg2-binary = "^2.9.7"
+django-extensions = "^3.2.3"
+ipython = "^8.15.0"
+django-debug-toolbar = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
